Added new components and made some changes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .cool-shadow {
+    @apply shadow-lg dark:shadow-md dark:shadow-blue-200;
+  }
+}
